tenants/howto-k8s-ingress-gateway/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howto-k8s-ingress-gateway
  labels:
    mesh: howto-k8s-ingress-gateway
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color-headers
  namespace: howto-k8s-ingress-gateway
spec:
  awsName: color-headers.howto-k8s-ingress-gateway.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-headers
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color-paths
  namespace: howto-k8s-ingress-gateway
spec:
  awsName: color-paths.howto-k8s-ingress-gateway.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-paths
---
apiVersion: v1
kind: Service
metadata:
  name: color-green
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: green
  template:
    metadata:
      labels:
        app: color
        version: green
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-ingress-gateway/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-blue
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      labels:
        app: color
        version: blue
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-ingress-gateway/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-red
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      labels:
        app: color
        version: red
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-ingress-gateway/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-yellow
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: yellow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: yellow
  template:
    metadata:
      labels:
        app: color
        version: yellow
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-ingress-gateway/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-white
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: color
    version: white
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: white
  template:
    metadata:
      labels:
        app: color
        version: white
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-ingress-gateway/colorapp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color-headers
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: color-paths
  namespace: howto-k8s-ingress-gateway
spec:
  ports:
    - port: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-gw
  namespace: howto-k8s-ingress-gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8088
      name: http
  selector:
    app: ingress-gw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw
  namespace: howto-k8s-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-gw
  template:
    metadata:
      labels:
        app: ingress-gw
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.16.1.0-prod
          ports:
            - containerPort: 8088
